--- a/installer/Cargo.toml
+++ b/installer/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "app_dat"
+name = "installer"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chalk_rs = "1.0.1"
