--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name = "interpreter"
-version = "0.1.0"
+name = "lead_lang_interpreter"
+version = "0.0.4"
 edition = "2021"
+description = "Interpreter of the Lead Programming Language"
+license = "MIT"
+
+[lib]
+name = "interpreter"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
