--- a/packages/std/Cargo.toml
+++ b/packages/std/Cargo.toml
@@ -1,8 +1,16 @@
 [package]
-name = "std"
-version = "0.1.0"
+name = "lead_lang_std"
+version = "0.0.3"
 edition = "2021"
+description = "Standard Package of the Lead Programming Language"
+license = "MIT"
+
+[lib]
+name = "lead_std"
+crate-type = ["cdylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+inquire = "0.6.2"
+lead_lang_interpreter = { path = "../../interpreter" }
