--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "rust-analyzer.linkedProjects": [
+    ".\\Cargo.toml",
     ".\\interpreter\\Cargo.toml",
     ".\\lead\\Cargo.toml",
     ".\\packages\\core\\Cargo.toml",
