--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Publish
         run: cargo publish
         working-directory: interpreter
+        continue-on-error: true
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
 
@@ -30,6 +31,7 @@ jobs:
     name: Launch
 
     strategy:
+      fail-fast: false
       matrix:
         build-os:
           - windows-latest
@@ -58,3 +60,4 @@ jobs:
         with:
           file: ./build.zip
           asset_name: binaries_${{ runner.os }}.zip
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
