--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lead_lang_core"
-version = "0.0.6"
+version = "0.0.0-dev-lead-lang"
 edition = "2021"
 description = "Core Package of the Lead Programming Language"
 license = "MIT"
