--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lead_lang_interpreter"
-version = "0.0.6"
+version = "0.0.0-dev-lead-lang"
 edition = "2021"
 description = "Interpreter of the Lead Programming Language"
 license = "MIT"
