--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.0.0-dev-lead-lang"
 edition = "2021"
 description = "Pack into zip"
 license = "MIT"
+
+[dependencies]
+fs_extra = "1.3.0"
