--- a/lead_init/Cargo.toml
+++ b/lead_init/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chalk_rs = "1.0.1"
+dirs = "5.0.1"
+indicatif = "0.17.8"
+inquire = "0.7.4"
 reqwest = { version = "0.12.2", features = ["blocking", "json"] }
