--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -7,9 +7,12 @@ license = "MIT"
 
 [lib]
 name = "lead_core"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 lead_lang_interpreter = { path = "../../interpreter" }
+
+[features]
+doc = []
