--- a/packages/std/Cargo.toml
+++ b/packages/std/Cargo.toml
@@ -7,10 +7,10 @@ license = "MIT"
 
 [lib]
 name = "lead_std"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-inquire = "0.7.1"
+inquire = "0.7.4"
 lead_lang_interpreter = { path = "../../interpreter" }
