--- a/lead_init/Cargo.toml
+++ b/lead_init/Cargo.toml
@@ -9,4 +9,11 @@ edition = "2021"
 dirs = "5.0.1"
 indicatif = "0.17.8"
 inquire = "0.7.4"
-reqwest = { version = "0.12.2", features = ["blocking", "json"] }
+lazy_static = "1.4.0"
+reqwest = { version = "0.12.2", features = ["json"] }
+serde = { version = "1.0.197", features = ["derive"] }
+tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
+zip-extract = "0.1.3"
+
+[target.'cfg(windows)'.dependencies]
+winreg = "0.52.0"
