--- a/lead_docs/Cargo.toml
+++ b/lead_docs/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "lead_docs"
-version = "0.1.0"
+version = "0.0.0-dev-lead-lang"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tao = { version = "0.26.2", features = ["rwh_06"] }
-wry = "0.38.2"
+include_dir = "0.7.3"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.115"
+tao = { version = "0.27", features = ["rwh_06"] }
+wry = "0.39"
