--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -91,6 +91,10 @@ jobs:
         run: cargo +nightly build --release
         working-directory: lead_init
 
+      - name: chmod
+        if: runner.os == 'Linux'
+        run: chmod 777 ./publish
+
       - name: Get tag
         run: ./publish
         id: tag
