--- a/lead_docs/ui/package.json
+++ b/lead_docs/ui/package.json
@@ -9,17 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "solid-js": "^1.8.15"
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "solid-js": "^1.8.17"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.9.0",
+    "daisyui": "^4.12.2",
     "postcss": "^8.4.38",
     "solid-icons": "^1.1.0",
-    "solid-markdown": "^2.0.1",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
+    "solid-markdown": "^2.0.13",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.2",
+    "vite": "^5.3.1",
     "vite-plugin-solid": "^2.10.2"
   }
 }
