--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,6 @@
     ".\\interpreter\\Cargo.toml",
     ".\\lead\\Cargo.toml",
     ".\\packages\\core\\Cargo.toml",
-    ".\\packages\\std\\Cargo.toml",
-    ".\\lead_init\\Cargo.toml",
-    ".\\lead_docs\\Cargo.toml"
+    ".\\packages\\std\\Cargo.toml"
   ]
 }
