--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,8 @@ name: Build & Publish
 permissions: write-all
 on:
   push:
+  schedule:
+    - cron: "0 0 * * *"
 
 jobs:
   publish_cargo:
@@ -20,6 +22,8 @@ jobs:
 
       - name: Add Version Info
         run: node ver.js
+        env:
+          NIGHTLY: ${{ github.event_name == 'schedule' }}
 
       - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -58,6 +62,8 @@ jobs:
 
       - name: Add Version Info
         run: node ver.js
+        env:
+          NIGHTLY: ${{ github.event_name == 'schedule' }}
 
       - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -107,6 +113,7 @@ jobs:
           asset_name: lead_init_${{ matrix.build-os }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.tag.outputs.TAG_NAME }}
+          prerelease: ${{ github.event_name == 'schedule' }}
 
       - name: Publish Windows Bin
         uses: svenstaro/upload-release-action@v2
@@ -116,6 +123,7 @@ jobs:
           asset_name: lead_init_${{ matrix.build-os }}.exe
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.tag.outputs.TAG_NAME }}
+          prerelease: ${{ github.event_name == 'schedule' }}
 
       - name: Publish
         uses: svenstaro/upload-release-action@v2
@@ -124,3 +132,4 @@ jobs:
           asset_name: binaries_${{ matrix.build-os }}.zip
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.tag.outputs.TAG_NAME }}
+          prerelease: ${{ github.event_name == 'schedule' }}
