--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,8 +31,11 @@ jobs:
           toolchain: nightly
 
       - name: Publish
-        run: cargo publish --allow-dirty
-        working-directory: interpreter
+        run: |
+          cd interpreter
+          cargo publish --allow-dirty
+          cd ../macros
+          cargo publish --allow-dirty
         continue-on-error: true
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
