--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     ".\\interpreter\\Cargo.toml",
     ".\\lead\\Cargo.toml",
     ".\\packages\\core\\Cargo.toml",
-    ".\\packages\\std\\Cargo.toml"
+    ".\\packages\\std\\Cargo.toml",
+    ".\\macros\\Cargo.toml"
   ]
 }
