--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -13,7 +13,7 @@ proc-macro = true
 proc-macro2 = "1.0.89"
 quote = "1.0.37"
 syn = "2.0.87"
-interpreter = { version = "0.0.0-dev-lead-lang" }
+lead_lang_interpreter = { version = "0.0.0-dev-lead-lang" }
 
 [patch.crates-io]
-interpreter = { path = "../interpreter" }
+lead_lang_interpreter = { path = "../interpreter" }
