--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ permissions: write-all
 on:
   push:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 1 * *"
 
 jobs:
   publish_cargo:
@@ -23,7 +23,7 @@ jobs:
       - name: Add Version Info
         run: node ver.js
         env:
-          NIGHTLY: ${{ github.event_name == 'schedule' }}
+          NIGHTLY: ${{ github.event_name == 'push' }}
 
       - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -33,9 +33,9 @@ jobs:
       - name: Publish
         run: |
           cd interpreter
-          cargo publish --allow-dirty
+          cargo publish --allow-dirty || true
           cd ../macros
-          cargo publish --allow-dirty
+          cargo publish --allow-dirty || true
         continue-on-error: true
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
@@ -55,11 +55,26 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build-os:
-          - windows
-          - ubuntu
+        include:
+          - target: x86_64-pc-windows-msvc
+            runner: windows-latest
 
-    runs-on: ${{ matrix.build-os }}-latest
+          - target: aarch64-pc-windows-msvc
+            runner: windows-latest
+
+          - target: x86_64-unknown-linux-gnu
+            runner: ubuntu-22.04
+
+          - target: aarch64-unknown-linux-gnu
+            runner: ubuntu-22.04
+
+          - target: x86_64-apple-darwin
+            runner: macos-latest
+
+          - target: aarch64-apple-darwin
+            runner: macos-latest
+
+    runs-on: ${{ matrix.runner }}
 
     steps:
       - name: Initial Commit
@@ -74,18 +89,44 @@ jobs:
       - name: Add Version Info
         run: node ver.js
         env:
-          NIGHTLY: ${{ github.event_name == 'schedule' }}
+          NIGHTLY: ${{ github.event_name == 'push' }}
 
       - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: nightly
+          target: ${{ matrix.target }}
 
-      - name: Install Deps (Linux)
-        if: runner.os == 'Linux'
+      - name: Install Deps (Linux aarch64)
+        if: matrix.target == 'aarch64-unknown-linux-gnu'
         run: |
-          sudo apt install zip
           sudo apt update
+
+          sudo apt install gcc-aarch64-linux-gnu
+          sudo dpkg --add-architecture arm64
+          sudo cat ubuntu > /etc/apt/sources.list
+
+          sudo apt-get update && sudo apt-get upgrade -y
+
+          sudo apt install build-essential \
+            curl \
+            wget \
+            file \
+            libxdo-dev:arm64 \
+            libayatana-appindicator3-dev:arm64 \
+            librsvg2-dev:arm64 \
+            libgtk-3-dev:arm64
+
+          sudo apt install libwebkit2gtk-4.1-dev:arm64
+          sudo apt install libssl-dev:arm64
+
+          sudo apt install zip
+
+      - name: Install Deps (Linux x86)
+        if: matrix.target == 'x86_64-unknown-linux-gnu'
+        run: |
+          sudo apt update
+          sudo apt install zip
           sudo apt install libwebkit2gtk-4.1-dev \
             build-essential \
             curl \
@@ -116,31 +157,31 @@ jobs:
         run: ./publish
         id: tag
 
-      - name: Publish Linux Bin
+      - name: Publish Linux / Macos Bin
         uses: svenstaro/upload-release-action@v2
-        if: matrix.build-os == 'ubuntu'
+        if: matrix.runner != 'windows-latest'
         with:
           file: ./lead_init/target/release/lead_init
-          asset_name: lead_init_${{ matrix.build-os }}
+          asset_name: lead_init_${{ matrix.target }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.tag.outputs.TAG_NAME }}
-          prerelease: ${{ github.event_name == 'schedule' }}
+          prerelease: ${{ github.event_name == 'push' }}
 
       - name: Publish Windows Bin
         uses: svenstaro/upload-release-action@v2
-        if: matrix.build-os == 'windows'
+        if: matrix.runner == 'windows-latest'
         with:
           file: ./lead_init/target/release/lead_init.exe
-          asset_name: lead_init_${{ matrix.build-os }}.exe
+          asset_name: lead_init_${{ matrix.target }}.exe
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.tag.outputs.TAG_NAME }}
-          prerelease: ${{ github.event_name == 'schedule' }}
+          prerelease: ${{ github.event_name == 'push' }}
 
       - name: Publish
         uses: svenstaro/upload-release-action@v2
         with:
           file: ./build.zip
-          asset_name: binaries_${{ matrix.build-os }}.zip
+          asset_name: binaries_${{ matrix.target }}.zip
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.tag.outputs.TAG_NAME }}
-          prerelease: ${{ github.event_name == 'schedule' }}
+          prerelease: ${{ github.event_name == 'push' }}
