--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -104,7 +104,7 @@ jobs:
 
           sudo apt install gcc-aarch64-linux-gnu
           sudo dpkg --add-architecture arm64
-          sudo cat ubuntu > /etc/apt/sources.list
+          sudo cat ubuntu | sudo tee /etc/apt/sources.list
 
           sudo apt-get update && sudo apt-get upgrade -y
 
