--- a/leadman/Cargo.toml
+++ b/leadman/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leadman"
-version = "0.1.0"
+version = "0.0.0-dev-lead-lang"
 edition = "2021"
 publish = false
 rust-version = "1.81"
@@ -9,8 +9,17 @@ rust-version = "1.81"
 chalk_rs = "1.0.1"
 chrono = "0.4.38"
 dirs = "5.0.1"
-inquire = "0.7.5"
-reqwest = { version = "0.12.9", features = ["json"] }
+indicatif = "0.17.9"
+inquire = { version = "0.7.5", default-features = false, features = [
+  "console",
+  "fuzzy",
+  "one-liners",
+  "macros",
+] }
+reqwest = { version = "0.12.9", default-features = false, features = [
+  "json",
+  "rustls-tls",
+] }
 serde = { version = "1.0.215", features = ["derive"] }
 tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
 
