--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,10 +9,12 @@ on:
 
 jobs:
   tag:
-    name: Get Tag
+    name: Get Tag + Release
     runs-on: ubuntu-latest
     outputs:
       tag: ${{ steps.ver.outputs.TAG_NAME }}
+      upload: ${{ steps.release.outputs.upload_url }}
+      id: ${{ steps.release.outputs.id }}
 
     steps:
       - name: Checkout
@@ -29,6 +31,14 @@ jobs:
         env:
           NIGHTLY: ${{ github.event_name == 'push' }}
         id: ver
+
+      - name: Create Release
+        uses: shogo82148/actions-create-release@v1
+        id: release
+        with:
+          tag_name: ${{ steps.ver.outputs.TAG_NAME }}
+          prerelease: ${{ github.event_name == 'push' }}
+          draft: true
 
   publish_cargo:
     needs: [tag]
@@ -179,26 +189,20 @@ jobs:
         working-directory: leadman
 
       - name: Publish Linux / Macos Bin
-        uses: svenstaro/upload-release-action@v2
+        uses: shogo82148/actions-upload-release-asset@v1
         if: matrix.runner != 'windows-latest'
         with:
-          file: ./leadman/target/${{ matrix.target }}/release/leadman
+          asset_path: ./leadman/target/${{ matrix.target }}/release/leadman
           asset_name: leadman_${{ matrix.target }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ needs.tag.outputs.tag }}
-          prerelease: ${{ github.event_name == 'push' }}
-          draft: true
+          upload_url: ${{ needs.tag.outputs.upload }}
 
       - name: Publish Windows Bin
-        uses: svenstaro/upload-release-action@v2
+        uses: shogo82148/actions-upload-release-asset@v1
         if: matrix.runner == 'windows-latest'
         with:
-          file: ./leadman/target/${{ matrix.target }}/release/leadman.exe
+          asset_path: ./leadman/target/${{ matrix.target }}/release/leadman.exe
           asset_name: leadman_${{ matrix.target }}.exe
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ needs.tag.outputs.tag }}
-          prerelease: ${{ github.event_name == 'push' }}
-          draft: true
+          upload_url: ${{ needs.tag.outputs.upload }}
 
       - name: Publish
         uses: svenstaro/upload-release-action@v2
@@ -220,10 +224,19 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Publish Leadman Build
-        uses: svenstaro/upload-release-action@v2
+        uses: shogo82148/actions-upload-release-asset@v1
         with:
-          file: ./leadman/build
+          asset_path: ./leadman/build
           asset_name: build
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ needs.tag.outputs.tag }}
-          prerelease: ${{ github.event_name == 'push' }}
+          upload_url: ${{ needs.tag.outputs.upload }}
+
+      - name: Undraft release
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.repos.updateRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: ${{ needs.tag.outputs.id }},
+              draft: false
+            })
