--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -99,10 +99,22 @@ jobs:
             runner: windows-latest
 
           - target: x86_64-unknown-linux-gnu
+            runner: ubuntu-latest
+
+          - target: aarch64-unknown-linux-gnu
             runner: ubuntu-22.04
 
-          # - target: aarch64-unknown-linux-gnu
-          #   runner: ubuntu-22.04
+          - target: aarch64-unknown-netbsd
+            runner: ubuntu-latest
+
+          - target: x86_64-unknown-netbsd
+            runner: ubuntu-latest
+
+          - target: aarch64-unknown-openbsd
+            runner: ubuntu-latest
+
+          - target: x86_64-unknown-openbsd
+            runner: ubuntu-latest
 
           - target: x86_64-apple-darwin
             runner: macos-latest
@@ -134,6 +146,12 @@ jobs:
           toolchain: nightly
           target: ${{ matrix.target }}
 
+      - name: Install zip
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt update
+          sudo apt install zip
+
       - name: Install Deps (Linux aarch64)
         if: matrix.target == 'aarch64-unknown-linux-gnu'
         run: |
@@ -157,13 +175,10 @@ jobs:
           sudo apt install libwebkit2gtk-4.1-dev:arm64
           sudo apt install libssl-dev:arm64
 
-          sudo apt install zip
-
       - name: Install Deps (Linux x86)
         if: matrix.target == 'x86_64-unknown-linux-gnu'
         run: |
           sudo apt update
-          sudo apt install zip
           sudo apt install libwebkit2gtk-4.1-dev \
             build-essential \
             curl \
