--- a/web/package.json
+++ b/web/package.json
@@ -1,23 +1,13 @@
 {
-  "name": "web",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "build": "rspress build",
-    "dev": "rspress dev",
-    "format": "prettier --write .",
-    "lint": "eslint .",
-    "preview": "rspress preview"
-  },
-  "dependencies": {
-    "rspress": "^1.37.2"
-  },
+  "type": "module",
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@types/node": "^22.9.3",
-    "eslint": "^9.15.0",
-    "globals": "^15.12.0",
-    "prettier": "^3.3.3",
-    "typescript-eslint": "^8.15.0"
+    "vitepress": "^1.5.0",
+    "vitepress-plugin-tabs": "^0.5.0",
+    "vue": "^3.5.13"
+  },
+  "scripts": {
+    "dev": "vitepress dev",
+    "build": "vitepress build",
+    "preview": "vitepress preview"
   }
 }
