--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -107,13 +107,7 @@ jobs:
           - target: x86_64-unknown-netbsd
             runner: ubuntu-latest
 
-          - target: aarch64-unknown-netbsd
-            runner: ubuntu-latest
-
           - target: x86_64-unknown-freebsd
-            runner: ubuntu-latest
-
-          - target: aarch64-unknown-freebsd
             runner: ubuntu-latest
 
           - target: x86_64-apple-darwin
@@ -146,13 +140,7 @@ jobs:
           toolchain: nightly
           target: ${{ matrix.target }}
 
-      - name: Install zip
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt update
-          sudo apt install zip
-
-      - name: Install Deps (Linux aarch64)
+      - name: Install Deps
         if: matrix.target == 'aarch64-unknown-linux-gnu'
         run: |
           sudo apt update
@@ -163,6 +151,7 @@ jobs:
 
           sudo apt-get update && sudo apt-get upgrade -y
 
+          sudo apt install zip
           sudo apt install build-essential \
             curl \
             wget \
@@ -170,25 +159,15 @@ jobs:
             libxdo-dev:arm64 \
             libayatana-appindicator3-dev:arm64 \
             librsvg2-dev:arm64 \
-            libgtk-3-dev:arm64
-
-          sudo apt install libwebkit2gtk-4.1-dev:arm64
-          sudo apt install libssl-dev:arm64.
-
-      - name: Install Deps (Linux x86)
-        if: matrix.target == 'x86_64-unknown-linux-gnu'
-        run: |
-          sudo apt update
-          sudo apt install libwebkit2gtk-4.1-dev \
-            build-essential \
-            curl \
-            wget \
-            file \
+            libgtk-3-dev:arm64 \
             libxdo-dev \
             libssl-dev \
             libayatana-appindicator3-dev \
             librsvg2-dev \
             libgtk-3-dev
+
+          sudo apt install libwebkit2gtk-4.1-dev:arm64
+          sudo apt install libssl-dev:arm64
 
       - name: Build Lead Docs UI
         run: pnpm install; pnpm build
@@ -201,10 +180,10 @@ jobs:
 
       - name: Build Leadman
         run: |
-          $arch=(echo ${{ matrix.target }})
+          arch=(echo "${{ matrix.target }}"")
           if [[ $arch == "aarch64-unknown-linux-gnu" ]]; then
             echo "Setting PKG CONFIG for aarch64 linux"
-            
+
             export PKG_CONFIG_SYSROOT_DIR=/usr/aarch64-linux-gnu/
           fi
 
