--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,10 @@
-
 rustflags = ["-C", "target-feature=+crt-static"]
+
+[target.x86_64-unknown-freebsd]
+linker = "x86_64-freebsd-gcc"
+
+[target.x86_64-unknown-netbsd]
+linker = "x86_64-netbsd-gcc"
 
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
