--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -145,9 +145,7 @@ jobs:
         run: |
           sudo apt update
 
-          sudo apt install gcc-aarch64-linux-gnu
-          sudo dpkg --add-architecture arm64
-          sudo cat ubuntu | sudo tee /etc/apt/sources.list
+          sudo apt install gcc-aarch64-linux-gnu gcc-x86-64-freebsd gcc-x86-64-netbsd
 
           sudo apt-get update && sudo apt-get upgrade -y
 
@@ -156,18 +154,28 @@ jobs:
             curl \
             wget \
             file \
-            libxdo-dev:arm64 \
-            libayatana-appindicator3-dev:arm64 \
-            librsvg2-dev:arm64 \
-            libgtk-3-dev:arm64 \
-            libxdo-dev \
-            libssl-dev \
-            libayatana-appindicator3-dev \
-            librsvg2-dev \
-            libgtk-3-dev
 
-          sudo apt install libwebkit2gtk-4.1-dev:arm64
-          sudo apt install libssl-dev:arm64
+          target=(echo "${{ matrix.target }}")
+
+          if [[ $target == "aarch64-unknown-linux-gnu" ]]; then
+            sudo dpkg --add-architecture arm64
+            sudo cat ubuntu | sudo tee /etc/apt/sources.list
+
+            sudo apt-get update && sudo apt-get upgrade -y
+
+            sudo apt install libxdo-dev:arm64 \
+              libayatana-appindicator3-dev:arm64 \
+              librsvg2-dev:arm64 \
+              libgtk-3-dev:arm64 \
+            sudo apt install libwebkit2gtk-4.1-dev:arm64
+            sudo apt install libssl-dev:arm64
+          elif [[ $target == "x86_64-unknown-linux-gnu" ]]; then
+            sudo apt install libxdo-dev \
+              libssl-dev \
+              libayatana-appindicator3-dev \
+              librsvg2-dev \
+              libgtk-3-dev
+          fi
 
       - name: Build Lead Docs UI
         run: pnpm install; pnpm build
@@ -180,7 +188,7 @@ jobs:
 
       - name: Build Leadman
         run: |
-          arch=(echo "${{ matrix.target }}"")
+          arch=(echo "${{ matrix.target }}")
           if [[ $arch == "aarch64-unknown-linux-gnu" ]]; then
             echo "Setting PKG CONFIG for aarch64 linux"
 
