--- a/lead/.cargo/config.toml
+++ b/lead/.cargo/config.toml
@@ -1,10 +1,26 @@
-rustflags = ["-C", "target-feature=+crt-static"]
+rustflags = []
 
 [target.x86_64-unknown-freebsd]
-linker = "x86_64-freebsd-gcc"
+linker = "clang"
+rustflags = [
+  "-C",
+  "link-arg=--target=x86_64-unknown-freebsd",
+  "-C",
+  "link-arg=-fuse-ld=lld",
+  "-C",
+  "target-feature=+crt-static",
+]
 
 [target.x86_64-unknown-netbsd]
-linker = "x86_64-netbsd-gcc"
+linker = "clang"
+rustflags = [
+  "-C",
+  "link-arg=--target=x86_64-unknown-netbsd",
+  "-C",
+  "link-arg=-fuse-ld=lld",
+  "-C",
+  "target-feature=+crt-static",
+]
 
 [target.aarch64-unknown-linux-gnu]
 linker = "aarch64-linux-gnu-gcc"
