--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -173,8 +173,7 @@ jobs:
               libssl-dev \
               libayatana-appindicator3-dev \
               librsvg2-dev \
-              libgtk-3-dev \
-              gdk-sys
+              libgtk-3-dev
           fi
 
       - name: Build Lead Docs UI
