--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -173,7 +173,8 @@ jobs:
               libssl-dev \
               libayatana-appindicator3-dev \
               librsvg2-dev \
-              libgtk-3-dev
+              libgtk-3-dev \
+              libwebkit2gtk-4.1-dev
           fi
 
       - name: Build Lead Docs UI
