--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -104,11 +104,11 @@ jobs:
           - target: aarch64-unknown-linux-gnu
             runner: ubuntu-22.04
 
-          - target: x86_64-unknown-netbsd
-            runner: ubuntu-latest
+          # - target: x86_64-unknown-netbsd
+          #   runner: ubuntu-latest
 
-          - target: x86_64-unknown-freebsd
-            runner: ubuntu-latest
+          # - target: x86_64-unknown-freebsd
+          #   runner: ubuntu-latest
 
           - target: x86_64-apple-darwin
             runner: macos-latest
@@ -154,6 +154,7 @@ jobs:
             curl \
             wget \
             file \
+            pkg-config 
 
           target=(echo "${{ matrix.target }}")
 
@@ -170,12 +171,17 @@ jobs:
             sudo apt install libwebkit2gtk-4.1-dev:arm64
             sudo apt install libssl-dev:arm64
           elif [[ $target == "x86_64-unknown-linux-gnu" ]]; then
-            sudo apt install libxdo-dev \
+            sudo apt update
+            sudo apt install libwebkit2gtk-4.1-dev \
+              build-essential \
+              curl \
+              wget \
+              file \
+              libxdo-dev \
               libssl-dev \
               libayatana-appindicator3-dev \
               librsvg2-dev \
-              libgtk-3-dev \
-              libwebkit2gtk-4.1-dev
+              libgtk-3-dev
           fi
 
       - name: Build Lead Docs UI
