--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -156,7 +156,7 @@ jobs:
             file \
             pkg-config 
 
-          target=(echo "${{ matrix.target }}")
+          target="${{ matrix.target }}"
 
           if [[ $target == "aarch64-unknown-linux-gnu" ]]; then
             echo "Installing aarch64 dependencies"
@@ -172,7 +172,7 @@ jobs:
               libgtk-3-dev:arm64 \
             sudo apt install libwebkit2gtk-4.1-dev:arm64
             sudo apt install libssl-dev:arm64
-          elif [[ $target == "x86_64-unknown-linux-gnu" ]]; then
+          else
             echo "Installing x86 dependencies"
 
             sudo apt update
@@ -195,7 +195,7 @@ jobs:
       - name: Package stuff (Unix)
         if: runner.os != 'Windows'
         run: |
-          arch=(echo "${{ matrix.target }}")
+          arch="${{ matrix.target }}"
           if [[ $arch == "aarch64-unknown-linux-gnu" ]]; then
             echo "Setting PKG CONFIG for aarch64 linux"
 
