--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -170,8 +170,8 @@ jobs:
               libayatana-appindicator3-dev:arm64 \
               librsvg2-dev:arm64 \
               libgtk-3-dev:arm64 \
-            sudo apt install libwebkit2gtk-4.1-dev:arm64
-            sudo apt install libssl-dev:arm64
+              libwebkit2gtk-4.1-dev:arm64 \
+              libssl-dev:arm64
           else
             echo "Installing x86 dependencies"
 
