--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -240,6 +240,43 @@ jobs:
           asset_name: binaries_${{ matrix.target }}.zip
           upload_url: ${{ needs.tag.outputs.upload }}
 
+  # build-bsd:
+  #   name: Release & Publish
+
+  #   needs: [tag]
+
+  #   strategy:
+  #     matrix:
+  #       target:
+  #         - x86_64-unknown-freebsd
+  #         - x86_64-unknown-netbsd
+
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+
+  #     - name: Install Rust
+  #       uses: dtolnay/rust-toolchain@stable
+  #       with:
+  #         targets: ${{ matrix.target }}
+
+  #     - name: Package Stuff
+  #       run: |
+  #         sudo apt-get update
+  #         sudo apt-get -y install podman
+
+  #         cargo install cross
+
+  #         cross run --release --target ${{ matrix.target }}
+  #       env:
+  #         TARGET: ${{ matrix.target }}
+  #         USE_CROSS: true
+
+  #     - name: Build leadman
+  #       run: |
+
   publish:
     name: Undraft Release
     needs: [tag, publish_cargo, build]
