--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          name: web/.vitepress/dist
+          path: ./web/.vitepress/dist/
 
   deploy:
     environment:
