--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -147,8 +147,6 @@ jobs:
 
           sudo apt install gcc-aarch64-linux-gnu clang lld
 
-          sudo apt-get update && sudo apt-get upgrade -y
-
           sudo apt install zip
           sudo apt install build-essential \
             curl \
@@ -164,7 +162,7 @@ jobs:
             sudo dpkg --add-architecture arm64
             sudo cat ubuntu | sudo tee /etc/apt/sources.list
 
-            sudo apt-get update && sudo apt-get upgrade -y
+            sudo apt-get update
 
             sudo apt install libxdo-dev:arm64 \
               libayatana-appindicator3-dev:arm64 \
@@ -246,6 +244,7 @@ jobs:
     needs: [tag]
 
     strategy:
+      fail-fast: false
       matrix:
         target:
           - x86_64-unknown-freebsd
@@ -262,6 +261,10 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
+      - name: Install zip
+        run: |
+          sudo apt install zip
+
       - name: Package Stuff
         run: |
           sudo apt-get update
@@ -269,13 +272,29 @@ jobs:
 
           cargo install cross
 
-          cross run --release --target ${{ matrix.target }}
+          cargo run --release --target ${{ matrix.target }}
         env:
           TARGET: ${{ matrix.target }}
           USE_CROSS: true
 
       - name: Build leadman
         run: |
+          cross +nightly build --target ${{ matrix.target }} --release
+        working-directory: leadman
+
+      - name: Publish Linux / Macos Bin
+        uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          asset_path: ./leadman/target/${{ matrix.target }}/release/leadman
+          asset_name: leadman_${{ matrix.target }}
+          upload_url: ${{ needs.tag.outputs.upload }}
+
+      - name: Publish
+        uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          asset_path: ./build.zip
+          asset_name: binaries_${{ matrix.target }}.zip
+          upload_url: ${{ needs.tag.outputs.upload }}
 
   publish:
     name: Undraft Release
