--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -238,7 +238,7 @@ jobs:
           asset_name: binaries_${{ matrix.target }}.zip
           upload_url: ${{ needs.tag.outputs.upload }}
 
-  build-bsd:
+  build-cross:
     name: Release & Publish
 
     needs: [tag]
@@ -249,6 +249,7 @@ jobs:
         target:
           - x86_64-unknown-freebsd
           - x86_64-unknown-netbsd
+          - x86_64-pc-solaris
 
     runs-on: ubuntu-latest
 
@@ -299,7 +300,7 @@ jobs:
 
   publish:
     name: Undraft Release
-    needs: [tag, publish_cargo, build]
+    needs: [tag, publish_cargo, build, build-cross]
     runs-on: ubuntu-latest
 
     steps:
