--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -95,10 +95,16 @@ jobs:
           - target: x86_64-pc-windows-msvc
             runner: windows-latest
 
+          - target: i686-pc-windows-msvc
+            runner: windows-latest
+
           - target: aarch64-pc-windows-msvc
             runner: windows-latest
 
           - target: x86_64-unknown-linux-gnu
+            runner: ubuntu-latest
+
+          - target: i686-unknown-linux-gnu
             runner: ubuntu-latest
 
           - target: aarch64-unknown-linux-gnu
