--- a/leadman/Cargo.toml
+++ b/leadman/Cargo.toml
@@ -9,6 +9,7 @@ rust-version = "1.81"
 chalk_rs = "1.0.1"
 chrono = "0.4.38"
 dirs = "5.0.1"
+fs_extra = "1.3.0"
 indicatif = "0.17.9"
 inquire = { version = "0.7.5", default-features = false, features = [
   "console",
