--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -104,9 +104,6 @@ jobs:
           - target: x86_64-unknown-linux-gnu
             runner: ubuntu-latest
 
-          - target: i686-unknown-linux-gnu
-            runner: ubuntu-latest
-
           - target: aarch64-unknown-linux-gnu
             runner: ubuntu-22.04
 
@@ -177,7 +174,7 @@ jobs:
               libwebkit2gtk-4.1-dev:arm64 \
               libssl-dev:arm64
           else
-            echo "Installing x86 dependencies"
+            echo "Installing x86_64 dependencies"
 
             sudo apt update
             sudo apt install libwebkit2gtk-4.1-dev \
