--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -252,6 +252,7 @@ jobs:
         target:
           - i686-unknown-linux-gnu
           - x86_64-unknown-freebsd
+          - i686-unknown-freebsd
 
     runs-on: ubuntu-latest
 
