--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -136,6 +136,7 @@ jobs:
         with:
           toolchain: nightly
           target: ${{ matrix.target }}
+          components: rust-src
 
       - name: Install Deps
         if: runner.os == 'Linux'
@@ -256,9 +257,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          targets: ${{ matrix.target }}
+          target: ${{ matrix.target }}
           toolchain: nightly
           components: rust-src
 
