--- a/leadman/Cargo.toml
+++ b/leadman/Cargo.toml
@@ -24,7 +24,8 @@ reqwest = { version = "0.12", default-features = false, features = [
   "rustls-tls",
 ] }
 serde = { version = "1", features = ["derive"] }
-tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
+serde_json = "1.0.134"
+tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
 zip = "2"
 
 [target.'cfg(windows)'.dependencies]
