--- a/lead/Cargo.toml
+++ b/lead/Cargo.toml
@@ -13,3 +13,4 @@ dlopen2 = "0.7.0"
 lead_lang_interpreter = { path = "../interpreter" }
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.134"
+tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }
