--- a/lead/Cargo.toml
+++ b/lead/Cargo.toml
@@ -8,11 +8,14 @@ name = "lead"
 path = "./src/main.rs"
 
 [dependencies]
-chalk_rs = "1.0.1"
-dlopen2 = "0.7.0"
+chalk_rs = "1"
+dlopen2 = "0.7"
 lead_lang_interpreter = { path = "../interpreter" }
-serde = { version = "1.0.216", features = ["derive"] }
-serde_json = "1.0.134"
-sysinfo = { version = "0.33.1", default-features = false, features = ["system"] }
-termcolor = "1.4.1"
-tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+sysinfo = { version = "0.33", default-features = false, features = ["system"] }
+termcolor = "1"
+tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs"] }
+
+[build-dependencies]
+tauri-winres = "0.1"
